[package]
name = "pdf_oxide_mcp"
version = "0.3.43"
edition = "2021"
description = "MCP server for PDF extraction — gives Claude, Cursor, and AI assistants the ability to read PDFs locally. Text, markdown, and HTML output. Powered by pdf_oxide."
license = "MIT OR Apache-2.0"
repository = "https://github.com/yfedoseev/pdf_oxide"
homepage = "https://oxide.fyi"
documentation = "https://pdf.oxide.fyi"
readme = "README.md"
keywords = ["mcp", "pdf", "claude", "llm", "ai"]
categories = ["command-line-utilities", "text-processing"]

[[bin]]
name = "pdf-oxide-mcp"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
pdf_oxide = { version = "0.3.43", path = ".." }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.27"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/pdf_oxide-{ target }-{ version }.tar.gz"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/v{ version }/pdf_oxide-linux-x86_64-{ version }.tar.gz"

[package.metadata.binstall.overrides.x86_64-unknown-linux-musl]
pkg-url = "{ repo }/releases/download/v{ version }/pdf_oxide-linux-x86_64-musl-{ version }.tar.gz"

[package.metadata.binstall.overrides.aarch64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/v{ version }/pdf_oxide-linux-aarch64-{ version }.tar.gz"

[package.metadata.binstall.overrides.x86_64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/pdf_oxide-macos-x86_64-{ version }.tar.gz"

[package.metadata.binstall.overrides.aarch64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/pdf_oxide-macos-aarch64-{ version }.tar.gz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/pdf_oxide-windows-x86_64-{ version }.zip"
pkg-fmt = "zip"
